{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 134,
  "lineage": "16d55c28-b6a2-258c-2117-398b3634918d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "53"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-11-11T11:12:12.025-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/misinformation-mitigation/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/networks/misinformation-mitigation-vpc-network",
            "priority": 1000,
            "project": "misinformation-mitigation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/firewalls/allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-09T10:42:27.364-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/misinformation-mitigation/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/networks/misinformation-mitigation-vpc-network",
            "priority": 1000,
            "project": "misinformation-mitigation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-misinformation-mitigation-gke-cluster"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "misinformation_mitigation_api_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.73.156",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-10-09T09:33:33.575-07:00",
            "id": "projects/misinformation-mitigation/global/addresses/misinformation-mitigation-api-ip",
            "name": "misinformation-mitigation-api-ip",
            "prefix_length": 0,
            "project": "misinformation-mitigation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/addresses/misinformation-mitigation-api-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.239.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-10-09T09:36:06.124-07:00",
            "id": "projects/misinformation-mitigation/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/networks/misinformation-mitigation-vpc-network",
            "prefix_length": 16,
            "project": "misinformation-mitigation",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/misinformation-mitigation/global/networks/misinformation-mitigation-vpc-network",
            "mtu": 0,
            "name": "misinformation-mitigation-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "misinformation-mitigation",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/networks/misinformation-mitigation-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-11T11:12:12.152-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/misinformation-mitigation/regions/northamerica-northeast1/routers/misinformation-mitigation-router",
            "name": "misinformation-mitigation-router",
            "network": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/networks/misinformation-mitigation-vpc-network",
            "project": "misinformation-mitigation",
            "region": "northamerica-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/regions/northamerica-northeast1/routers/misinformation-mitigation-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "misinformation-mitigation/northamerica-northeast1/misinformation-mitigation-router/misinformation-mitigation-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "misinformation-mitigation-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "misinformation-mitigation",
            "region": "northamerica-northeast1",
            "router": "misinformation-mitigation-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-07T12:31:12.095-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/misinformation-mitigation/regions/northamerica-northeast1/subnetworks/misinformation-mitigation-subnet",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "misinformation-mitigation-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/global/networks/misinformation-mitigation-vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "misinformation-mitigation",
            "purpose": "PRIVATE",
            "region": "northamerica-northeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "pod-ranges"
              },
              {
                "ip_cidr_range": "10.30.0.0/16",
                "range_name": "services-ranges"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/misinformation-mitigation/regions/northamerica-northeast1/subnetworks/misinformation-mitigation-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "misinformation_mitigation_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "misinformation-mitigation/misinformation-mitigation-ingress",
            "metadata": [
              {
                "annotations": {
                  "ingress.gcp.kubernetes.io/pre-shared-cert": "mcrt-07acb06c-b373-45c2-bcf8-95d94e2890f3,misinformation-mitigation-cert",
                  "kubernetes.io/ingress.allow-http": "false",
                  "kubernetes.io/ingress.class": "gce",
                  "kubernetes.io/ingress.force-ssl-redirect": "true",
                  "kubernetes.io/ingress.global-static-ip-name": "misinformation-mitigation-api-ip",
                  "networking.gke.io/managed-certificates": "misinformation-mitigation-cert"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "misinformation-mitigation-ingress",
                "namespace": "misinformation-mitigation",
                "resource_version": "31603651",
                "uid": "13598cac-8777-4450-88e3-748135618349"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "misinformation-mitigation-api",
                        "port": [
                          {
                            "name": "",
                            "number": 80
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "api.veri-fact.ai",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "misinformation-mitigation-api",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.36.73.156"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "google_compute_global_address.misinformation_mitigation_api_ip",
            "google_compute_global_address.private_ip_address",
            "google_compute_managed_ssl_certificate.misinformation_mitigation_cert",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_container_cluster.primary",
            "google_service_account.gke_sa",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.misinformation_mitigation_db",
            "kubernetes_deployment.misinformation_mitigation_api",
            "kubernetes_namespace.misinformation_mitigation",
            "kubernetes_service.misinformation_mitigation_api",
            "kubernetes_service_account.workload_identity_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "misinformation_mitigation",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "misinformation-mitigation",
            "metadata": [
              {
                "generation": 0,
                "name": "misinformation-mitigation",
                "resource_version": "859557",
                "uid": "54c2f625-7f44-4e55-83ed-9f7b429ba3cf"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_container_cluster.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "misinformation_mitigation_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "misinformation-mitigation/misinformation-mitigation-api",
            "metadata": [
              {
                "generation": 0,
                "name": "misinformation-mitigation-api",
                "namespace": "misinformation-mitigation",
                "resource_version": "899825",
                "uid": "1e8f256b-0547-4ff4-ac26-96af1e9b90a6"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.30.174.212",
                "cluster_ips": [
                  "10.30.174.212"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32299,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "misinformation-mitigation-api"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "google_compute_global_address.private_ip_address",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_container_cluster.primary",
            "google_service_account.gke_sa",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.misinformation_mitigation_db",
            "kubernetes_deployment.misinformation_mitigation_api",
            "kubernetes_namespace.misinformation_mitigation",
            "kubernetes_service_account.workload_identity_sa"
          ]
        }
      ]
    }
  ]
}